--- a/1_Basics/02_selectors.html
+++ b/1_Basics/02_selectors.html
@@ -8,28 +8,29 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script>
-
+    // We start again with a document ready function to manipulate some DOM
     $(document).ready(function(){
-        // Element selection in jQuery is very simple
+        // Element selection in jQuery is very simple = YOU JUST NEED A $()
         // you just need a $()
-        // What ever you put in between your brackets is your selection
-
+        
+        
+        // What ever you put in between your brackets is your selection:
         // You can have elements,
-        $("p").css("border", "1px solid blue");
+        $("p").css("border", "1px solid blue"); // Gives all the <p> some blue border (thats all the bars as well as the cream)
         // Classes,
-        $(".foo").css("border", "3px solid red");
+        $(".foo").css("border", "3px solid red"); // Gives the whole foo-box a red border
         // ids,
-        $("#baz").css("border", "3px solid green"); 
+        $("#baz").css("border", "3px solid green"); // Gives the whole baz-box a green border
         // or even complex CSS selections like :first          
-        $("p:first").css("background-color", "pink");
+        $("p:first").css("background-color", "pink"); // Gives only the first <p> a pink background
         // or :not()          
         $("p:not(#baz)").css("font-family", "sans-serif");
 
         // Just remember, this is a jQuery selection that will give you back a jQuery object.
         // This object looks different to a vanilla javascript object. 
-        // Console log a selection an see for yourself!
+        // Console.log a selection and see for yourself!
 
-        // Only jQuery object are able to be manipulated using jQuery methods like append, prepend and so on.
+        // (((Only jQuery object are able to be manipulated using jQuery methods like append, prepend and so on.)))
     });
     </script>
 </head>
