--- a/01_JQuery_Basics/06_hover over text.html
+++ b/01_JQuery_Basics/06_hover over text.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>hover event</title>
+    <title>Hover Event over Text</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         li:hover{
