--- a/03_Sliders/01_basic_slider/index.html
+++ b/03_Sliders/01_basic_slider/index.html
@@ -13,10 +13,10 @@
     <a href="#" class="button_weiter">&gt;</a>
     <a href="#" class="button_zurueck">&lt;</a>
     <ul>
-      <li>Slide 1</li>
-      <li style="background: #aaa">Slide 2</li>
-      <li>Slide 3</li>
-      <li style="background: #aaa">Slide 4</li>
+      <li>Slide Content 1</li>
+      <li style="background: #aaa">Slide Content 2</li>
+      <li>Slide Content 3</li>
+      <li style="background: #aaa">Slide Content 4</li>
     </ul>
   </div>
   <div class="slider_option">
